# CIS-314

./: DataStructures.py  Firstpython.py  Madden randonmizer.py  README.md  Random.py  copycode.py  filelog.py  gui.py  notes.py  test.py  valentine generator.py
FinalProject/: pyproject.toml
